# pyjson

./: README.md  pyproject.toml
src/pyjson/: __init__.py  decoder.py  encoder.py
test/: test_decoder.py  test_encoder.py
