[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyjson"
version = "0.0.1"
authors = [
  { name="Mikolaj Kida", email="kida.miko@gmail.com" },
]
description = "JSON parsing utilities."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
